samples/_failures_safe/1761563141_770b6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2a0cc5b.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_f2a0cc5b.c:153:9: error: expected declaration or statement at end of input
  153 |         }
      |         ^
./samples/SAFE/__tmp_f2a0cc5b.c:153:9: error: expected declaration or statement at end of input
